Added 5 maps to the test yourself page ready for use

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -67,7 +67,7 @@
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">Google Maps</a> for desktop or for mobile users, check the documentation at <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank">Google Maps for Mobile</a>.</p><br>
     </div>
   </section>
-
+<!-- Map One-->
   <section class="container">
     <div class="row">
       <div class="col-12 div2">
@@ -81,18 +81,78 @@
       <div class="col-lg-4 div3">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-help-map-1">
+          <div class="card-body" id="card-map-1">
             <h5 class="card-title">Question One</h5>
           </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
-        <div class="card shadow" id="card-help-map-large-1">
+        <div class="card shadow" id="card-map-large-1">
           <div class="card-body">
             <p>Click on the map on or near the marker and make sure you're in satellite mode
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
             <p>Measure the intersection length heading north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
+            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+          </div>
+        </div>
+      </div>
+    </div>
+<!-- Map Two-->
+<div class="row">
+      <div class="col-12 div2">
+        <h2>Open the map</h2>
+        <p class="card-text">
+         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 div3">
+        <div class="card shadow">
+          <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
+          <div class="card-body" id="card-map-2">
+            <h5 class="card-title">Question Two</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8 div3">
+        <div class="card shadow" id="card-map-large-2">
+          <div class="card-body">
+            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
+            <p>Measure the intersection length heading north east on Sunnyholt Road over the M7 continuing north east on Sunnyholt Road.</p>
+            <div class="container" id="map_two"></div>
+            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+          </div>
+        </div>
+      </div>
+    </div>
+
+     <div class="row">
+      <div class="col-12 div2">
+        <h2>Open the map</h2>
+        <p class="card-text">
+         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 div3">
+        <div class="card shadow">
+          <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
+          <div class="card-body" id="card-map-3">
+            <h5 class="card-title">Question One</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8 div3">
+        <div class="card shadow" id="card-map-large-3">
+          <div class="card-body">
+            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
+            <p>Virginia</p>
+            <div class="container" id="map_three"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
         </div>
@@ -111,18 +171,48 @@
       <div class="col-lg-4 div3">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-help-map-2">
+          <div class="card-body" id="card-map-4">
             <h5 class="card-title">Question Two</h5>
           </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
-        <div class="card shadow" id="card-help-map-large-2">
+        <div class="card shadow" id="card-map-large-4">
           <div class="card-body">
             <p>Click on the map on or near the marker and make sure you're in satellite mode
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Measure the intersection length heading north east on Sunnyholt Road over the M7 continuing north east on Sunnyholt Road.</p>
-            <div class="container" id="map_two"></div>
+            <p>Germany</p>
+            <div class="container" id="map_four"></div>
+            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 div2">
+        <h2>Open the map</h2>
+        <p class="card-text">
+         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 div3">
+        <div class="card shadow">
+          <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
+          <div class="card-body" id="card-map-5">
+            <h5 class="card-title">Question Two</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8 div3">
+        <div class="card shadow" id="card-map-large-5">
+          <div class="card-body">
+            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
+            <p>Dublin</p>
+            <div class="container" id="map_five"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
         </div>
