Removed instructions page replaced with help buttons on the test yourself page

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -60,11 +60,17 @@
   <section>
       <div class="container div1">
       <h1>Test Yourself</h1>
-      <p class="head-text">In this test you will be given one of four possible maps where you'll measure the intersection distance and be given
-       random scenario for you to calculate if a dilemma zone or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
-       <a href="index.html" target="_blank">calculator</a> for best results.</p>
-      <p class="head-text">For instructions on how to measure distances across the intersection on Google Maps you can see the documentation for desktop usage at 
-      <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">Google Maps</a> for desktop or for mobile users, check the documentation at <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank">Google Maps for Mobile</a>.</p><br>
+      <p class="head-text">There are five maps to choose from in this test where you'll need to measure the intersection distance for a given
+       scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
+       <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> calculator</a> for best results.</p>
+      <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
+      
+      <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-sm-row background-ul">
+      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fas fa-desktop"></i> Desktop</button></a></li>
+      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
+      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a><br></li>
+      </ul>
+      
     </div>
   </section>
 <!-- Map One-->
@@ -73,7 +79,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+         Map one is located in Moscow, Russia at Tverskaya Zastava Square.
         </p>
       </div>
     </div>
@@ -89,9 +95,9 @@
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-map-large-1">
           <div class="card-body">
-            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker (make sure you're in satellite mode)
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Measure the intersection length heading north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
+            <p>Measure the intersection length from the south east and continuing north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
@@ -103,7 +109,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+         Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road.
         </p>
       </div>
     </div>
@@ -119,9 +125,9 @@
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-map-large-2">
           <div class="card-body">
-            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker (make sure you're in satellite mode)
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Measure the intersection length heading north east on Sunnyholt Road over the M7 continuing north east on Sunnyholt Road.</p>
+            <p>Measure the intersection length heading from the south west continuing north east on Sunnyholt Road over the M7.</p>
             <div class="container" id="map_two"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
@@ -133,7 +139,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+         Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive.
         </p>
       </div>
     </div>
@@ -142,16 +148,16 @@
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-3">
-            <h5 class="card-title">Question One</h5>
+            <h5 class="card-title">Question Three</h5>
           </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-map-large-3">
           <div class="card-body">
-            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker (make sure you're in satellite mode)
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Virginia</p>
+            <p>Measure the intersection length heading from the south west continuing north east on Lexington Drive over the Harry Byrd Highway.</p>
             <div class="container" id="map_three"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
@@ -163,7 +169,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+         Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street.
         </p>
       </div>
     </div>
@@ -172,16 +178,16 @@
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-4">
-            <h5 class="card-title">Question Two</h5>
+            <h5 class="card-title">Question Four</h5>
           </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-map-large-4">
           <div class="card-body">
-            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker (make sure you're in satellite mode)
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Germany</p>
+            <p>Measure the intersection length heading from the east continuing west on Sigmundstraße over Leyher Street.</p>
             <div class="container" id="map_four"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
@@ -193,7 +199,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+         Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way.
         </p>
       </div>
     </div>
@@ -202,16 +208,16 @@
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-5">
-            <h5 class="card-title">Question Two</h5>
+            <h5 class="card-title">Question Five</h5>
           </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-map-large-5">
           <div class="card-body">
-            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker (make sure you're in satellite mode)
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Dublin</p>
+            <p>Measure the intersection length heading from the south continuing north on Constitutio Hill.</p>
             <div class="container" id="map_five"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
