Add 404 page for lost users and unstyled question for test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -79,17 +79,21 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map one is located in Moscow, Russia at Tverskaya Zastava Square.
+         Map one is located in Moscow, Russia at Tverskaya Zastava Square. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 div3">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-1">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-1">
+          <div class="card-body">
             <h5 class="card-title">Question One</h5>
-          </div>
+            <p>Determine the size of the intersection using the Google Map link provided and by using the following data, assess if a dilemma or option zone exists:</p>
+            <p>An alert driver with a better than average reaction times approaches the intersection in dry conditions with good road to tire grip. The driver is cruising at 45 kmh<sup>-1</sup>. 
+            The yellow phase is 4.2 s and interphase 2.2 s. The driver's vehicle is 5.2 m long.</p>
+            <p>You should consider using external sources to determine each of the unknown variables.</p>
+            </div>
         </div>
       </div>
       <div class="col-lg-8 div3">
@@ -109,7 +113,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road.
+         Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
       </div>
     </div>
@@ -139,7 +143,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive.
+         Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
       </div>
     </div>
@@ -169,7 +173,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street.
+         Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
       </div>
     </div>
@@ -199,7 +203,7 @@
       <div class="col-12 div2">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way.
+         Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
       </div>
     </div>
