Add new spacer values in CSS for larger padding values

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
@@ -63,15 +63,15 @@
     </nav>
   </header>
 <section>
-<h1>Whoa there! You've come right into a dilemma zone!</h1>
+<h2 class="align-center pt-4 mt-4">Whoa there! You've come right into a dilemma zone!</h2>
 <p class="align-center"><img src="assets/images/hazard.png" alt="Hazard sign" class="hazard-sign img-fluid"></p>
-<h1>But we have your options covered. </h1>
-<p class="align-center"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
+<h2 class="align-center">But we have your options covered. </h2>
+<p class="align-center pb-5 mb-5"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
 </section>
 
 
   <!-- Footer -->
-  <footer class="page-footer font-small darken-3">
+  <footer class="mt-7 page-footer font-small darken-3">
 
     <!-- Footer Elements -->
     <div class="container">
