Add new styles to background and headings of all pages for increased clarity and contrast

--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,9 @@
     </nav>
   </header>
  <section>
-    <div class="container div1">
-      <h1>Contact Us</h1>
+    <div class="container div2">
+    <div class="container heading-background">
+      <h1>Contact Us <i class="fas fa-envelope-open"></i></h1>
       <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
       the form below.</p>
       <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out, 
@@ -67,15 +68,18 @@
       <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and  
       symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p><br>
     </div>
+    </div>
   </section>
    <section class="container">
 
       <div class="row">
         <div class="col-12 div2">
+        <div class="container heading-background heading-padding heading-margin">
           <h2>Send us a message</h2>
           <p class="card-text">
             Let us know what type of improvements or calculators you'd like to see in our next release of Physics Code.
           </p>
+        </div>
         </div>
       </div>
       <form id="user_request" method="post">
