--- a/game.html
+++ b/game.html
@@ -60,22 +60,26 @@
     </nav>
   </header>
 <section>
-    <div class="container div1">
-      <h1>Reaction Time Game</h1>
+    <div class="container div2">
+    <div class="container heading-background">
+      <h1>Reaction Time Game <i class="fas fa-gamepad"></i></h1>
       <p class="head-text">If you're wanting to test your reaction time for the calculator, you can do so here by playing this game. Just try to hit the 
       brakes when the light turns red.</p>
       <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by hand and mouse or touch screen may not give an 
       accurate representation of reaction time. This game tests your reaction time as an estimate only.</p>
       <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p><br>
     </div>
+    </div>
   </section>
   <section class="container">
    <div class="row">
         <div class="col-12 div2">
+        <div class="container heading-background heading-padding heading-margin">
           <h2>Test your reaction time!</h2>
           <p class="card-text">
             Click the "start" button to turn the lamp green. Wait until the lamp turns red and the brake button appears and try and click the brakes as fast as you can. 
           </p>
+          </div>
         </div>
       </div>
   </section>
