--- a/help.html
+++ b/help.html
@@ -54,8 +54,9 @@
     </nav>
   </header>
   <section>
-    <div class="container div1">
-      <h1>Help with understanding the Dilemma Zone variables</h1>
+    <div class="container div2">
+    <div class="container heading-background">
+      <h1>Help with understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
       <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
         firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
       <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
@@ -65,15 +66,18 @@
         required and how the results can be evaluated.</p>
       <p class="head-text my-0"></p><br>
     </div>
+    </div>
   </section>
   <!--First Set of Cards-->
   <section class="container">
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Velocity and signal phases</h2>
         <p class="card-text">
           The best methods to determine initial velocities and traffic light phases.
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -140,10 +144,12 @@
     <!-- Second Set of Cards-->
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Reaction Time, Friction and Intersection Size</h2>
         <p class="card-text">
           Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection.
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -188,8 +194,7 @@
               more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" target="_blank">
                 here</a>.
                 \[μ\]</p>
-                
-          </div>
+             </div>
         </div>
       </div>
     </div>
@@ -218,10 +223,12 @@
     <!--Third Set of Cards-->
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Length of vehicle</h2>
         <p class="card-text">
           Length of vehicles vary depending on make, model and even type. 
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -248,10 +255,12 @@
     <!--Fourth Set of Cards-->
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Putting it all together</h2>
         <p class="card-text">
           When you have all your variables you can put them into our <a href="index.html" target="_blank"> calculator</a> or work it out yourself with this equation.
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
