--- a/test_yourself.html
+++ b/test_yourself.html
@@ -58,8 +58,9 @@
     </nav>
   </header>
   <section>
-      <div class="container div1">
-      <h1>Test Yourself</h1>
+      <div class="container div2">
+      <div class="container heading-background">
+      <h1>Test Yourself <i class="fas fa-pencil-ruler"></i></h1>
       <p class="head-text">There are five maps to choose from in this test where you'll need to measure the intersection distance for a given
        scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
        <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> calculator</a> for best results.</p>
@@ -70,17 +71,19 @@
       <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
       <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a><br></li>
       </ul>
-      
+      </div>
     </div>
   </section>
 <!-- Map One-->
   <section class="container">
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
          Map one is located in Moscow, Russia at Tverskaya Zastava Square. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -111,10 +114,12 @@
 <!-- Map Two-->
 <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
          Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -141,10 +146,12 @@
 
      <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
          Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -171,10 +178,12 @@
 
 <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
          Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
@@ -201,10 +210,12 @@
 
     <div class="row">
       <div class="col-12 div2">
+      <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
          Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
         </p>
+      </div>
       </div>
     </div>
     <div class="row">
